bootstrap/kubernetes/apps/media/jellyseerr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: jellyseerr
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      run: jellyseerr
  template:
    metadata:
      labels:
        run: jellyseerr
      annotations: {}
    spec:
      containers:
        - env:
            - name: TZ
              value: "America/Argentina/Cordoba"
            - name: forceIpv4First
              value: "true"
            - name: LOG_LEVEL
              value: "debug"
          image: ghcr.io/seerr-team/seerr:v3.5.0
          name: jellyseerr
          resources:
            requests:
              cpu: 50m
              memory: 300Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 5055
              name: webui
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
